--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -300,7 +300,7 @@ p  { font-size: 20px; color: var(--gray); max-width: 900px; }
       <br/>
       We are defining a new layer:
       <br/><br/>
-      <strong>Hyperscaler Engine for Sovereign XaaS Platforms.</strong>
+      <strong>The Generic Hyperscaler Engine for XaaS Platform Builders.</strong>
     </p>
 
   </div>
